[project]
name = "rtt"
version = "0.0.1"
dependencies = ["libretranslatepy>=2.1.3"]
requires-python = ">=3.11"
authors = [
    { name = "Manuel Stoeckel", email = "manuel.stoeckel@em.uni-frankfurt.de" },
]
description = "Simple Round-Trip-Translation Implementation"
readme = "README.md"
license = { text = "AGPL-3.0 License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
